fix: fixed inner border blocking scrollbar (#94)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@ app-gameboard {
 app-titlebar {
   display: flex;
   height: 2rem;
-  background-color: var(--theme-highlight-1);
+  background-color: var(--theme-titlebar-bg-color);
   box-shadow: 0px 2px 6px hsla(0, 0%, 0%, 0.35);
   position: relative;
   z-index: 10;
@@ -56,14 +56,11 @@ app-titlebar {
 
 .inner-border {
   width: 10px;
-  background-color: transparent;
   height: 100%;
   position: absolute;
-  left: -5px;
   z-index: 11;
 }
 
 .touch-inner-border {
-  width: 40px;
-  left: -10px;
+  width: 30px;
 }
